--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "status",
-  "version": "0",
+  "version": "1.0.0",
   "description": "something",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "author": "none", 
+  "license": "MIT", 
+  "dependencies": {
+    "discord.js": "^14.16.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.20.0"
   }
 }
